2010-08-15  David Reveman  <davidr@novell.com>

	* effect.h:
	* effect.cpp: Move perspective trasform fragment shader into
	ProjectionEffect class.

2010-08-12  David Reveman  <davidr@novell.com>

	* effect.h: Remove unused user data keys.

	* effect.cpp:
	* effect.h:
	* projection.cpp:
	* projection.h: Add missing const modifier.

2010-08-11  David Reveman  <davidr@novell.com>

	* uielement.cpp (PostRender): Apply correct transform
	to opacity mask.

	* effect.cpp (Composite): Use UpdateShaderConstant to set
	DdxUvDdyUv constant.

	* effect.cpp (GetShaderConstantBuffer): Fix size of constant
	buffer. Each constant requires 4 * sizeof (float) stoarge space.

2010-08-09  David Reveman  <davidr@novell.com>

	* uielement.h:
	* uielement.cpp: Add scale_xform member which is used to
	render the element at a non natural resolution when bitmap
	caching is used.

	* runtime.h:
	* runtime.cpp: Add ContextNode constructor that takes
	a transformation matrix. The matrix is used as the initial
	transform for the cairo context.

	* bitmapcache.h:
	* bitmapcache.cpp: Add CacheMode::GetTransform function.

2010-08-07  David Reveman  <davidr@novell.com>

	* writeablebitmap.cpp (Render): Don't clear the surface
	everytime we render to it.

	* shape.cpp (DoDraw):
	* uielement.h:
	* uielement.cpp: Remove ApplyTransform and use relative
	instead of absolute transformations and bounds. Front-to-back
	rendering still requires use of absolute transformations and
	bounds.

	* border.cpp (InsideObject):
	* media.cpp (InsideObject):
	* shape.cpp (InsideObject): Use cairo_set_matrix instead of
	ApplyTransform.

	* uielement.h:
	* uielement.cpp: Remove uielement_xform_key, which is no
	longer needed. Remove use of occlusion culling from
	UIElement::Paint as absolute transformations and bounds
	are invalid when this function is used.

2010-08-06  David Reveman  <davidr@novell.com>

	* uielement.h:
	* uielement.cpp: Remove render_projection member and adjust